--- a/.editorconfig
+++ b/.editorconfig
@@ -174,6 +174,9 @@ csharp_preserve_single_line_statements = true
 #### Naming styles ####
 [*.{cs,vb}]
 
+# Diagnostics
+dotnet_diagnostic.CS1591.severity = none
+
 # Naming rules
 
 dotnet_naming_rule.types_and_namespaces_should_be_pascalcase.severity = suggestion
